--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 	<meta name="description" content="A simple note taking app" />
 	<meta name="theme-color" content="#ffffff">
 	
+	<script src="https://js.stripe.com/v3/"></script>
+	
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
